# mistral-24b-abliterated

./: .gitignore  Modelfile  pyproject.toml  refusal_direction.pt
scripts/: 01_compute_direction.py  02_apply_abliteration.py  03_test_generation.py  download.py  prompts.py
